# the-interactive-transformer

./: .gitignore  .jupyter_ystore.db  README.md  download.sh  example.py  go.mod  interactive-transformer-tok.ipynb  interactive-transformer.ipynb  pyproject.toml  tokenizer.go  tokenizer_json.go  tokenizer_test.go
.ipynb_checkpoints/: interactive-transformer-checkpoint.ipynb
