[tool.poetry]
name = "the-interactive-transformer"
version = "0.1.0"
description = ""
authors = ["joshcarp <joshjcarp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab-myst = "^2.4.2"
jupyter-book = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
